docs: bilingual (RU/EN) README with banner, accurate to the terrain/feature seed split [skip ci]
Also add paths-ignore (**.md, docs/**, LICENSE) so doc-only pushes no longer trigger a full CI build.